# lcd_controller

./: CMakeLists.txt  README.md
src/ControllerIPCall/: CMakeLists.txt  ChineseConvert.h  IPCall.cpp  IPCall.h  IPCallID.h  LEDAdapterIPCall.cpp  LEDAdapterIPCall.h  LEDProtocol.cpp  LEDProtocol.h  LEDProtocolTestMain.cpp
src/LCDController/: CMakeLists.txt  CommonDef.h  LCDController.cpp  LCDController.h  Version.cpp  Version.h  main.cpp
src/LCDController/LCDPlayer/: LCDPlayer.cpp  LCDPlayer.h
src/LCDController/LEDPlayer/: LEDAdapterClient.cpp  LEDAdapterClient.h  LEDPlayer.cpp  LEDPlayer.h
src/LCDController/bj_pis/ats/: bj_ats_info.cpp  bj_ats_info.h  task_get_ats.cpp  task_get_ats.h  udp_multicast_client.cpp  udp_multicast_client.h
src/LCDController/bj_pis/bj_log/: log_detail_transfer.cpp  log_transfer.cpp  log_transfer.h
src/LCDController/bj_pis/convent/: bj_device_param.cpp  bj_device_param.h  bj_file_info.cpp  bj_file_info.h  bj_layout_info.cpp  bj_layout_info.h  bj_media_info.cpp  bj_media_info.h  bj_msg.cpp  bj_msg.h  bj_operation_param.cpp  bj_operation_param.h  bj_plan_info.cpp  bj_plan_info.h  bj_playlist_info.cpp  bj_playlist_info.h  bj_user_info.cpp  bj_user_info.h  hd_command.cpp  hd_command.h  hd_device_status.cpp  hd_device_status.h  hd_layout.cpp  hd_layout.h  hd_monitor.cpp  hd_monitor.h  hd_monitor_protocol.cpp  hd_monitor_protocol.h  hd_opm.cpp  hd_opm.h  hd_schedule.cpp  hd_schedule.h  t_command.h  tcp_msg_help.h
src/LCDController/bj_pis/tcp_client/: client_tcp_connection.cpp  client_tcp_connection.h  tcp_client.cpp  tcp_client.h
src/LCDController/bj_pis/tcp_server/: server_tcp_connection.cpp  server_tcp_connection.h  tcp_server.cpp  tcp_server.h
src/LCDController/bj_pis/thread/: i_disposable.h  tcp_client_thread.cpp  tcp_client_thread.h  tcp_server_thread.cpp  tcp_server_thread.h  thread_zcg.cpp  thread_zcg.h
src/LCDController/bj_pis/utils/: JsonObject.cpp  JsonObject.h  datetime.cpp  datetime.h  diagnostic.cpp  (+4 more)
src/LCDController/command/: Command.cpp  Command.h
src/LCDController/config/: configparser.cpp  configparser.h
src/LCDController/json/: CommandObjs.cpp  CommandObjs.h  DeviceStatusObj.cpp  DeviceStatusObj.h  FileHandlerBase.h  LayoutGroupFileHandler.cpp  LayoutGroupFileHandler.h  LoginObjs.cpp  LoginObjs.h  MediaFileHandler.cpp  MediaFileHandler.h  ScheduleFileHandler.cpp  ScheduleFileHandler.h  ScheduleObjs.cpp  ScheduleObjs.h  UpdateListFileHandler.cpp  UpdateListFileHandler.h
src/LCDController/mediaplay/: QtArrivalMsg-moc.cpp  QtArrivalMsg.cpp  QtArrivalMsg.h  QtClock-moc.cpp  QtClock.cpp  QtClock.h  QtFlash.cpp  QtFlash.h  QtImage-moc.cpp  QtImage.cpp  QtImage.h  QtLabelItem-moc.cpp  QtLabelItem.cpp  QtLabelItem.h  QtMarquee-moc.cpp  QtMarquee.cpp  QtMarquee.h  QtMediaDone-moc.cpp  QtMediaDone.cpp  QtMediaDone.h  QtOPMessage-moc.cpp  QtOPMessage.cpp  QtOPMessage.h  QtPanel-moc.cpp  QtPanel.cpp  QtPanel.h  QtSchedule-moc.cpp  QtSchedule.cpp  QtSchedule.h  QtShotWorker-moc.cpp  QtShotWorker.cpp  QtShotWorker.h  QtStage-moc.cpp  QtStage.cpp  QtStage.h  QtStreamDetector-moc.cpp  QtStreamDetector.cpp  QtStreamDetector.h  QtTimer-moc.cpp  QtTimer.cpp  (+3 more)
src/LCDController/ntp/: NtpDate.cpp  NtpDate.h
src/LCDController/serial/: SerialHandle.cpp  SerialHandle.h  SerialManager.cpp  SerialManager.h
src/LCDController/transmanage/: ArrMsgHandler.cpp  ArrMsgHandler.h  CmdHandler.cpp  CmdHandler.h  ITransHandler.cpp  ITransHandler.h  LiveSwitchHandler.cpp  LiveSwitchHandler.h  OPSHandler.cpp  OPSHandler.h  ScheduleHandler.cpp  ScheduleHandler.h  ScreenOnOffHandler.cpp  ScreenOnOffHandler.h  TrainTimeHandler.cpp  TrainTimeHandler.h  TransHandlerFactory.cpp  TransHandlerFactory.h  TransManager.cpp  TransManager.h  WeatherHandler.cpp  WeatherHandler.h
src/LCDController/websocket/: WebSocketNotify.cpp  WebSocketNotify.h
src/LCDController/xml/: StationEquipDef.cpp  StationEquipDef.h
(+44 files in other folders)
