aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} ControllerIPCall_src)
include_directories(/usr/local/TVSServer/include)
include_directories(/usr/local/Trolltech/Qt-4.8.6/include)
include_directories(../utilswapper)
link_directories(${PROJECT_SOURCE_DIR}/libs)
link_directories(/usr/local/Trolltech/Qt-4.8.6/lib)
link_directories(/usr/local/TVSServer/lib)
add_library(ControllerIPCall SHARED ${ControllerIPCall_src})
target_link_libraries(ControllerIPCall utilswapper)