aux_source_directory(. LCDController_src)
aux_source_directory(./bj_pis LCDController_src)
aux_source_directory(./bj_pis/ats LCDController_src)
aux_source_directory(./bj_pis/bj_log LCDController_src)
aux_source_directory(./bj_pis/convent LCDController_src)
aux_source_directory(./bj_pis/tcp_client LCDController_src)
aux_source_directory(./bj_pis/tcp_server LCDController_src)
aux_source_directory(./bj_pis/thread LCDController_src)
aux_source_directory(./bj_pis/utils LCDController_src)
aux_source_directory(./command LCDController_src)
aux_source_directory(./config LCDController_src)
aux_source_directory(./json LCDController_src)
aux_source_directory(./LCDPlayer LCDController_src)
aux_source_directory(./LEDPlayer LCDController_src)
aux_source_directory(./mediaplay LCDController_src)
aux_source_directory(./ntp LCDController_src)
aux_source_directory(./serial LCDController_src)
aux_source_directory(./transmanage LCDController_src)
aux_source_directory(./websocket LCDController_src)
aux_source_directory(./xml LCDController_src)
include_directories(.)
include_directories(../utilswapper)
include_directories(../ControllerIPCall)
include_directories(/usr/local/TVSServer/include)
include_directories(/usr/local/Trolltech/Qt-4.8.6/include)
link_directories(${PROJECT_SOURCE_DIR}/libs)
link_directories(/usr/local/Trolltech/Qt-4.8.6/lib)
link_directories(/usr/local/TVSServer/lib)
add_executable(LCDController ${LCDController_src})
target_link_libraries(LCDController ControllerIPCall utilswapper ssl waxberry_log waxberry_net boost_thread boost_filesystem boost_system boost_chrono boost_date_time boost_regex bsd curl pthread curlwapper QtWebKit QtCore QtGui QtAV QtAVWidgets avformat avfilter avcodec avdevice avutil avresample swscale swresample va postproc crypto)